--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
   "author": "",
   "license": "ISC",
   "babel": {
-  "presets": [
-    "es2015",
-    "react"
+    "presets": [
+      "es2015",
+      "react"
     ]
   },
   "dependencies": {
-    "lomega": "^1.0.0",
+    "clone": "^1.0.2",
+    "lomega": "^1.0.3",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.4.1",
+    "redux": "^3.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.3.26",
