--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-quickly",
+  "name": "shortstraw",
   "version": "1.0.0",
-  "description": "an introduction to redux",
+  "description": "delegate them tasks",
   "main": "./src/index.js",
   "scripts": {
     "start": "webpack --progress --colors --watch",
@@ -25,6 +25,7 @@
     "lomega": "^1.0.3",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-modal": "^1.3.0",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1"
   },
